tests/baselines/reference/classAbstractInAModule.errors.txt
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractInAModule.ts(6,1): error TS2511: Cannot create an instance of the abstract class 'A'.


==== tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractInAModule.ts (1 errors) ====
    module M {
        export abstract class A {}
        export class B extends A {}
    }
    
    new M.A;
    ~~~~~~~
!!! error TS2511: Cannot create an instance of the abstract class 'A'.
    new M.B;